sonar-fixes